Updated usage of the "show-scrollbars" and "hide-scrollbars" CSS class names to [fix bug 1544248]

--- a/widget/menu/src/css/menu-core.css
+++ b/widget/menu/src/css/menu-core.css
@@ -125,19 +125,22 @@ when one of its submenus is visible.
 
 */
 
-.yuimenu.show-scrollbars {
+.yuimenu.show-scrollbars,
+.yuimenubar.show-scrollbars {
 
 	overflow: visible; 
 
 }
 
-.yuimenu.hide-scrollbars .yui-menu-shadow {
+.yuimenu.hide-scrollbars .yui-menu-shadow,
+.yuimenubar.hide-scrollbars .yui-menu-shadow {
 
     overflow: hidden;
 
 }
 
-.yuimenu.show-scrollbars .yui-menu-shadow {
+.yuimenu.show-scrollbars .yui-menu-shadow,
+.yuimenubar.show-scrollbars .yui-menu-shadow {
 
     overflow: auto;
 
